crates/uitest/fixtures/ty_check/if_.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/if_.fe
---
error[8-0000]: type mismatch
  ┌─ if_.fe:2:16
  │
2 │     let x = if "a" {
  │                ^^^ expected `bool`, but `String<1>` is given

error[8-0000]: type mismatch
   ┌─ if_.fe:8:13
   │  
 8 │       let x = if true {
   │ ╭─────────────^
 9 │ │         "FOO"
10 │ │     } else {
11 │ │         false
12 │ │     }
   │ ╰─────^ expected `bool`, but `String<3>` is given

error[8-0000]: type mismatch
   ┌─ if_.fe:17:9
   │
17 │         false
   │         ^^^^^ expected `i32`, but `bool` is given
